<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/llContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/etName"
            android:background="@drawable/round_input_bg"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="5dp"
            android:padding="15dp"
            android:autofillHints="Nombre..." />

        <EditText
            android:id="@+id/etCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/etCourse"
            android:background="@drawable/round_input_bg"
            android:padding="15dp"
            android:autofillHints="Curso..." />

        <EditText
            android:id="@+id/etGrade1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/etGrade1"
            android:background="@drawable/round_input_bg"
            android:padding="15dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etGrade2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/etGrade2"
            android:background="@drawable/round_input_bg"
            android:padding="15dp"
            android:autofillHints="" />

        <CheckBox
            android:id="@+id/cbRepeatedCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cbRepeatedCourse" />

        <Button
            android:id="@+id/btnCalculateGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCalculateGrade"
            android:enabled="false"
            android:layout_marginTop="10dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="" />
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</layout>